fix: Fix array index bounds in WorldEditFindCommand and improve team allocation
- Fixed potential ArrayIndexOutOfBoundsException in WorldEditFindCommand by using Math.min for list iteration
- Improved Room's team allocation logic by shuffling players and optimizing team selection
- Added proper error message for team damage between same-team players in BaseEventListener
- Updated ItemIDSunName with missing items and fixed incorrect item mappings
- Cleaned up Test.java file and converted TestCommand to output item IDs instead of testing weapons
- Disabled locator bar for play levels in Room class
- Added debug info when players quit rooms